testCases/semanticAnalyzerTestCases/error/inconsistentFunctionCalls.cs16
/*
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void bar(void){
;
}

int foo(void){
;
}

int main(void){
    foo(5);

    bool x;
    x := foo();

    x := bar();

    bar(2);
    return 123456789;
}

